# ESP32-CAM-TCP-server

./: .gitignore  ARCHITECTURE.md  CAMERA_RELAY_CLIENT.md  CAMERA_TCP_SERVER.md  CLIENT_MODE.md  CONVERSION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAIN_MODE_TOGGLE.md  MODE_COMPARISON.md  MODULE_COMPARISON.md  PLATFORMIO_QUICKSTART.md  QUICKSTART.md  README.md  README_PLATFORMIO.md  RELAYCLIENT_MODULE.md  RELAY_FRAME_PARSING_FIX.md  REMOTE_ACCESS_OPTIONS.md  REMOTE_ACCESS_QUICKSTART.md  SECRETS_SETUP.md  SERIAL_MONITOR_TROUBLESHOOTING.md  TCPSERVER_MODULE.md  UPLOAD_GUIDE.md  camera.tcp.ino  library.json  platformio.ini  relay_server.py  relay_server_receiver.py  setup_ssh_tunnel.sh  test_client.py  upload_and_monitor.sh
examples/: RelayClient_Examples.cpp  TcpServer_Examples.cpp
include/: CameraRelayClient.h  CameraTcpServer.h  NetworkClient.h  RelayClient.h  TCPNetworkClient.h  TcpServer.h  UDPNetworkClient.h  camera_config.h  config.h.example  secrets.h.example
relay_server_rust/: Cargo.toml
relay_server_rust/src/: main.rs
src/: CameraRelayClient.cpp  CameraTcpServer.cpp  RelayClient.cpp  TcpServer.cpp  main.cpp
