[package]
name = "relay_server_receiver"
version = "0.1.0"
edition = "2021"
description = "ESP32-CAM Relay Server - receives frames and broadcasts to clients"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
